--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,7 +37,7 @@
     "rijksoverheid-fonts": "https://github.com/MinBZK/rijksoverheid-fonts",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
