--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "compare-versions": "^6.0.0-rc.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "javascript-time-ago": "^2.5.9",
     "next": "^13.4.7",
     "next-mdx-remote": "^4.4.1",
     "pg": "^8.9.0",
