--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
     "compare-versions": "^6.0.0-rc.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "^13.4.2",
