fix: add missing encoding package

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,8 +24,9 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "date-fns": "^2.30.0",
     "compare-versions": "^6.0.0",
+    "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "javascript-time-ago": "^2.5.9",
