--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,6 +92,8 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/strapi
       - CMS_URL=http://cms:9001
       - NEXT_PUBLIC_CMS_URL=http://localhost/cms
+      - WEB_URL=http://localhost:9000
+      - NEXT_PUBLIC_WEB_URL=http://localhost
       - VIRTUAL_HOST=localhost
       - VIRTUAL_PATH=/
       - VIRTUAL_DEST=/
