ci: update Dockerfile

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -72,10 +72,16 @@ USER ${UID}
 ARG DATABASE_URL
 ARG CMS_URL
 ARG NEXT_PUBLIC_CMS_URL
+ARG WEB_URL
+ARG NEXT_WEB_URL
 
 ENV DATABASE_URL ${DATABASE_URL}
+
 ENV CMS_URL ${CMS_URL}
 ENV NEXT_PUBLIC_CMS_URL ${NEXT_PUBLIC_CMS_URL}
+
+ENV WEB_URL ${WEB_URL}
+ENV NEXT_WEB_URL ${NEXT_WEB_URL}
 
 RUN yarn workspace web run prisma generate
 RUN yarn build
