--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -25,6 +25,8 @@ jobs:
             DATABASE_URL=${{ secrets.DATABASE_URL }}
             CMS_URL=http://cms:9001
             NEXT_PUBLIC_CMS_URL=https://regels.overheid.nl/cms
+            WEB_URL=http://localhost:9000
+            NEXT_PUBLIC_WEB_URL=https://regels.overheid.nl
       - uses: GarreauArthur/manage-digital-ocean-managed-database-trusted-sources-gh-action@main
         with:
           action: 'remove'
