--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,10 @@
     "stylecheck": "prettier --check .",
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
-    "prisma": "prisma"
+    "drizzle-kit": "drizzle-kit"
   },
   "dependencies": {
     "@octokit/rest": "^19.0.13",
-    "@prisma/client": "^4.16.2",
     "@sindresorhus/slugify": "^2.2.1",
     "@tabler/icons-react": "^2.24.0",
     "@total-typescript/ts-reset": "^0.4.2",
@@ -26,6 +25,8 @@
     "clsx": "^1.2.1",
     "compare-versions": "^6.0.0",
     "date-fns": "^2.30.0",
+    "drizzle-kit": "^0.19.11",
+    "drizzle-orm": "^0.27.2",
     "encoding": "^0.1.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -33,7 +34,7 @@
     "next": "13.4.9",
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.25",
-    "prisma": "^4.16.2",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
