Enable upload persistence

--- a/.github/configs/production/cms/values.yml
+++ b/.github/configs/production/cms/values.yml
@@ -12,4 +12,6 @@ ingress:
           pathType: Prefix
 imagePullSecrets:
   - name: regels-overheid-nl
+uploadsPersistence:
+  enabled: true
 configSecretName: cms-doppler-config
