ci: add missing build args

--- a/.github/workflows/validate-web-pr.yml
+++ b/.github/workflows/validate-web-pr.yml
@@ -31,3 +31,10 @@ jobs:
           target: prod
           file: ./apps/web/Dockerfile
           push: false
+          build-args: |
+            PUBLIC_URL=https://regels.overheid.nl/web/
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+            CMS_URL=http://cms:9001
+            NEXT_PUBLIC_CMS_URL=https://regels.overheid.nl/cms
+            WEB_URL=http://localhost:9000
+            NEXT_PUBLIC_WEB_URL=https://regels.overheid.nl
