--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -72,6 +72,7 @@ ARG CMS_URL
 ARG NEXT_PUBLIC_CMS_URL
 ARG WEB_URL
 ARG NEXT_WEB_URL
+ARG DATABASE_CA_CERT
 
 ENV DATABASE_URL ${DATABASE_URL}
 
@@ -80,6 +81,7 @@ ENV NEXT_PUBLIC_CMS_URL ${NEXT_PUBLIC_CMS_URL}
 
 ENV WEB_URL ${WEB_URL}
 ENV NEXT_WEB_URL ${NEXT_WEB_URL}
+ENV DATABASE_CA_CERT ${DATABASE_CA_CERT}
 
 RUN yarn build
 
