--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,7 @@ services:
         GID: ${GID:-1001}
         UID: ${UID:-1001}
     environment:
-      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/strapi
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/strapi
       - CMS_URL=http://cms:9001
       - NEXT_PUBLIC_CMS_URL=http://localhost/cms
       - WEB_URL=http://localhost:9000
