--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark-gfm": "^3.0.1",
+    "sass": "^1.69.5",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
