--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,8 @@
     "stylecheck": "prettier --check .",
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
-    "drizzle-kit": "drizzle-kit"
+    "drizzle-kit": "drizzle-kit",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@octokit/rest": "^19.0.13",
@@ -45,8 +46,18 @@
     "typescript": "5.3.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.8",
+    "@storybook/addon-interactions": "^7.6.8",
+    "@storybook/addon-links": "^7.6.8",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.8",
+    "@storybook/nextjs": "^7.6.8",
+    "@storybook/react": "^7.6.8",
+    "@storybook/test": "^7.6.8",
     "@types/pg": "^8.10.9",
+    "eslint-plugin-storybook": "^0.6.15",
     "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "storybook": "^7.6.8"
   }
 }
