chore: init cva

--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -3,5 +3,6 @@
   "singleQuote": true,
   "useTabs": false,
   "plugins": ["prettier-plugin-tailwindcss"],
-  "printWidth": 120
+  "printWidth": 120,
+  "tailwindFunctions": ["cva"]
 }
