--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "compare-versions": "^6.0.0",
+    "cva": "^1.0.0-beta.1",
     "date-fns": "^2.30.0",
     "drizzle-kit": "^0.20.4",
     "drizzle-orm": "^0.29.0",
@@ -42,6 +43,7 @@
     "sass": "^1.69.5",
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.3.2"
   },
