chore: upgrade strapi

--- a/apps/cms/.gitignore
+++ b/apps/cms/.gitignore
@@ -99,7 +99,6 @@ node_modules
 # Tests
 ############################
 
-testApp
 coverage
 
 ############################
@@ -109,7 +108,7 @@ coverage
 .env
 license.txt
 exports
-*.cache
+.strapi
+dist
 build
 .strapi-updater.json
-dist
