chore: update Dockerfiles

--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -1,27 +1,41 @@
 # ==== Base ====
-FROM node:18-alpine3.18 as base
-RUN apk update && \
-    apk add --no-cache libc6-compat openssl && \
-    yarn global add turbo
-# ==== Prune project ====
-FROM base as pruned
+FROM node:20.11-alpine as root
 
-WORKDIR /project
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+
+RUN corepack enable
+RUN corepack prepare pnpm@8 --activate 
+
+RUN apk add --no-cache libc6-compat
+RUN apk update
+
+RUN pnpm install -g turbo
+
+# ==== Builder ====
+FROM root as builder
+
+WORKDIR /app
+
 COPY . .
-RUN turbo prune --scope=cms --docker
-# ==== Install dependencies ====
-FROM base AS install
 
-WORKDIR /project
+RUN turbo prune cms --docker
 
-COPY --from=pruned /project/out/json/ .
-COPY --from=pruned /project/out/yarn.lock ./yarn.lock
+# ==== Installer ====
+FROM root as installer
 
-RUN yarn install
-# ==== Strapi Dev ====
-FROM base AS dev
+WORKDIR /app
 
-WORKDIR /project
+COPY .gitignore .gitignore
+COPY --from=builder /app/out/json/ .
+COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+
+# ==== Base ====
+FROM root AS base
+
+WORKDIR /app
 
 ARG UID=1001
 ARG GID=1001
@@ -29,43 +43,40 @@ ARG GID=1001
 RUN (getent group ${GID} || addgroup --system --gid ${GID} app) && \
     (getent passwd ${UID} || adduser --system --uid ${UID} app)
 
-COPY --from=pruned --chown=${UID}:${GID} /project/out/yarn.lock ./yarn.lock
-COPY --from=pruned --chown=${UID}:${GID} /project/out/full .
-COPY --from=install --chown=${UID}:${GID} /project/node_modules ./node_modules
-COPY --from=install --chown=${UID}:${GID} /project/apps/cms/node_modules ./apps/cms/node_modules
-
-ARG PUBLIC_URL=http://localhost:9001
-ENV PUBLIC_URL ${PUBLIC_URL}
-ENV NODE_ENV development
+COPY --from=builder --chown=${UID}:${GID} /app/out/full .
+COPY --from=builder --chown=${UID}:${GID} /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=installer --chown=${UID}:${GID} /app/node_modules ./node_modules
+COPY --from=installer --chown=${UID}:${GID} /app/apps/cms/node_modules ./apps/cms/node_modules
 
 USER ${UID}
 
-RUN yarn build
-EXPOSE 9001
-ENTRYPOINT yarn dev
+# ==== Dev ====
+FROM base as dev
 
-# ==== Strapi Prod ====
+WORKDIR /app
+
+ENV NODE_ENV development
+
+RUN pnpm build
+
+EXPOSE ${PORT}
+
+ENTRYPOINT pnpm dev
+
+# ==== Prod ====
 FROM base AS prod
 
-WORKDIR /project
-
-ARG UID=1001
-ARG GID=1001
-
-RUN (getent group ${GID} || addgroup --system --gid ${GID} app) && \
-    (getent passwd ${UID} || adduser --system --uid ${UID} app)
-
-COPY --from=pruned --chown=${UID}:${GID} /project/out/yarn.lock ./yarn.lock
-COPY --from=pruned --chown=${UID}:${GID} /project/out/full .
-COPY --from=install --chown=${UID}:${GID} /project/node_modules ./node_modules
-COPY --from=install --chown=${UID}:${GID} /project/apps/cms/node_modules ./apps/cms/node_modules
+WORKDIR /app
 
 ARG PUBLIC_URL=http://localhost:9001
 ENV PUBLIC_URL ${PUBLIC_URL}
+
 ENV NODE_ENV production
 
 USER ${UID}
 
-RUN yarn build
+RUN pnpm build
+
 EXPOSE 9001
-ENTRYPOINT yarn start
+
+ENTRYPOINT pnpm start
