--- a/apps/docs-beta/package.json
+++ b/apps/docs-beta/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "docusaurus server --host 0.0.0.0 --port 9003",
     "docusaurus": "docusaurus",
-    "dev": "docusaurus start --port 9003 --host 0.0.0.0",
+    "dev": "docusaurus start --host 0.0.0.0 --port 9003",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
