--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -15,12 +15,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          cache: yarn
-          node-version: 18
-      - run: yarn
+          cache: pnpm
+          node-version: 20.11
+      - run: pnpm
       - uses: changesets/action@v1
         with:
           createGithubReleases: true
-          publish: yarn changeset publish
+          publish: pnpm changeset publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
