--- a/apps/docs-beta/package.json
+++ b/apps/docs-beta/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "docusaurus server --host 0.0.0.0 --port 9003",
+    "start": "docusaurus serve --host 0.0.0.0 --port 9003",
     "docusaurus": "docusaurus",
     "dev": "docusaurus start --host 0.0.0.0 --port 9003",
     "build": "docusaurus build",
