--- a/.github/configs/production/docs/values.yml
+++ b/.github/configs/production/docs/values.yml
@@ -3,7 +3,7 @@ ingress:
   className: nginx
   annotations:
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      if ($request_uri ~* "^/docs/(.*)") {
+      if ($request_uri ~* "^/docs(.*)") {
         rewrite ^/docs/(.*) /$1 break;
       }
   className: nginx
