--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -77,8 +77,9 @@ ARG DATABASE_URL
 ARG CMS_URL
 ARG NEXT_PUBLIC_CMS_URL
 ARG WEB_URL
-ARG NEXT_WEB_URL
+ARG NEXT_PUBLIC_WEB_URL
 ARG DATABASE_CA_CERT
+
 
 ENV DATABASE_URL ${DATABASE_URL}
 
@@ -86,7 +87,7 @@ ENV CMS_URL ${CMS_URL}
 ENV NEXT_PUBLIC_CMS_URL ${NEXT_PUBLIC_CMS_URL}
 
 ENV WEB_URL ${WEB_URL}
-ENV NEXT_WEB_URL ${NEXT_WEB_URL}
+ENV NEXT_PUBLIC_WEB_URL ${NEXT_PUBLIC_WEB_URL}
 
 ENV DATABASE_CA_CERT ${DATABASE_CA_CERT}
 
