switched to latest version

--- a/.github/workflows/publiccode.yaml
+++ b/.github/workflows/publiccode.yaml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Update publiccode.yaml
-        uses: OpenCatalogi/publiccode-action@1.2.1
+        uses: OpenCatalogi/publiccode-action@latest
