--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@octokit/rest": "^20.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sindresorhus/slugify": "^2.2.1",
     "@tabler/icons-react": "^2.46.0",
     "@total-typescript/ts-reset": "^0.5.1",
