chore: remove user related args from docker

--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -37,18 +37,10 @@ FROM root AS base
 
 WORKDIR /app
 
-ARG UID=1001
-ARG GID=1001
-
-RUN (getent group ${GID} || addgroup --system --gid ${GID} app) && \
-    (getent passwd ${UID} || adduser --system --uid ${UID} app)
-
-COPY --from=builder --chown=${UID}:${GID} /app/out/full .
-COPY --from=builder --chown=${UID}:${GID} /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-COPY --from=installer --chown=${UID}:${GID} /app/node_modules ./node_modules
-COPY --from=installer --chown=${UID}:${GID} /app/apps/cms/node_modules ./apps/cms/node_modules
-
-USER ${UID}
+COPY --from=builder /app/out/full .
+COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=installer /app/node_modules ./node_modules
+COPY --from=installer /app/apps/cms/node_modules ./apps/cms/node_modules
 
 # ==== Dev ====
 FROM base as dev
@@ -72,8 +64,6 @@ ARG PUBLIC_URL=http://localhost:9001
 ENV PUBLIC_URL ${PUBLIC_URL}
 
 ENV NODE_ENV production
-
-USER ${UID}
 
 RUN pnpm build
 
