--- a/.github/actions/build-and-release-respec-document/action.yml
+++ b/.github/actions/build-and-release-respec-document/action.yml
@@ -1,10 +1,10 @@
 name: Build and release Respec
 inputs:
   name:
-    description: "Name of the document, will also be used as the asset label in the release"
+    description: 'Name of the document, will also be used as the asset label in the release'
     required: true
   token:
-    description: "GitHub access token"
+    description: 'GitHub access token'
     required: true
 runs:
   using: composite
