fix: permissions in Dockerfile

--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -15,7 +15,7 @@ RUN pnpm install -g turbo
 # ==== Builder ====
 FROM root as builder
 
-WORKDIR /app
+WORKDIR /opt/app
 
 COPY . .
 
@@ -24,28 +24,36 @@ RUN turbo prune cms --docker
 # ==== Installer ====
 FROM root as installer
 
-WORKDIR /app
+WORKDIR /opt/app
 
 COPY .gitignore .gitignore
-COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=builder /opt/app/out/json/ .
+COPY --from=builder /opt/app/out/pnpm-lock.yaml ./pnpm-lock.yaml
 
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 
 # ==== Base ====
 FROM root AS base
 
-WORKDIR /app
+ARG UID=1001
+ARG GID=1001
 
-COPY --from=builder /app/out/full .
-COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-COPY --from=installer /app/node_modules ./node_modules
-COPY --from=installer /app/apps/cms/node_modules ./apps/cms/node_modules
+RUN (getent group ${GID} || addgroup --system --gid ${GID} app) && \
+    (getent passwd ${UID} || adduser --system --uid ${UID} app)
+
+USER ${UID}
+
+WORKDIR /opt/app
+
+COPY --from=builder --chown=${UID}:${GID} /opt/app/out/full .
+COPY --from=builder --chown=${UID}:${GID} /opt/app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=installer --chown=${UID}:${GID} /opt/app/node_modules ./node_modules
+COPY --from=installer --chown=${UID}:${GID} /opt/app/apps/cms/node_modules ./apps/cms/node_modules
 
 # ==== Dev ====
 FROM base as dev
 
-WORKDIR /app
+WORKDIR /opt/app
 
 ENV NODE_ENV development
 
@@ -58,7 +66,7 @@ ENTRYPOINT pnpm dev
 # ==== Prod ====
 FROM base AS prod
 
-WORKDIR /app
+WORKDIR /opt/app
 
 ARG PUBLIC_URL=http://localhost:9001
 ENV PUBLIC_URL ${PUBLIC_URL}
