refactor: use different secret

--- a/.github/configs/production/cms/values.yml
+++ b/.github/configs/production/cms/values.yml
@@ -14,4 +14,4 @@ imagePullSecrets:
   - name: regels-overheid-nl
 uploadsPersistence:
   enabled: true
-configSecretName: cms-doppler-config
+configSecretName: cms
