--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@octokit/rest": "^20.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-portal": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@sindresorhus/slugify": "^2.2.1",
     "@tabler/icons-react": "^2.46.0",
@@ -34,6 +36,7 @@
     "pg": "^8.8.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-remove-scroll": "^2.5.9",
     "remark-gfm": "^3.0.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
